# cu-analytics-pipeline

./: .gitignore  README.md  pyproject.toml
scripts/: embed_reviews.py  generate_templates.py  run_etl.py  seed_db.py  seed_reviews.py
src/api/: analyst.py  logger.py  main.py  reports.py  routes.py
src/db/: schema.py  seed.py
src/etl/: pipeline.py  scrubber.py
src/rag/: embedder.py  generator.py  retriever.py
